--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.3",
     "install": "^0.13.0",
     "npm": "^8.7.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
