--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,23 @@ version: '3.7'
 services:
 
   client:
-    container_name : cliente-http
+    container_name: cliente-http
     build: ./Client
     depends_on:
       - grpc_server
       - redis
     ports:
       - "3000:3000"
-  
+
+  client2:
+    container_name: cliente-http2
+    build: ./Client
+    depends_on:
+      - grpc_server
+      - redis
+    ports:
+      - "3001:3000"
+
   grpc_server:
     container_name: servidor-grpc
     build: ./ServerJS
@@ -17,7 +26,7 @@ services:
       - postgres
     ports:
       - "8030:8030"
-    
+
   postgres:
     image: docker.io/bitnami/postgresql:11
     volumes:
@@ -29,13 +38,20 @@ services:
       - POSTGRESQL_PASSWORD=marihuana
     ports:
       - "5432:5432"
-  
+
   redis:
     container_name: cache
     image: redis:6.2.6
     restart: always
     ports:
-        - "8031:6379"
+      - "8031:6379"
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-    command: ["redis-server", "--bind", "redis","--maxmemory 2mb","--maxmemory-policy allkeys-lru"]
+    command:
+      [
+        "redis-server",
+        "--bind",
+        "redis",
+        "--maxmemory 2mb",
+        "--maxmemory-policy allkeys-lru"
+      ]
